syntax = "proto3";

option csharp_namespace = "eApp.PlatformService";

service GrpcPlatformService {
  rpc GetAllPlatforms(GetAllPlatformsRequest) returns (GetAllPlatformsResponse);
}

message GetAllPlatformsRequest {}

message GrpcPlatformModel {
  int32 platformId = 1;
  string name = 2;
  string publisher = 3;
}

message GetAllPlatformsResponse {
  repeated GrpcPlatformModel platforms = 1;
}